Fixed white space bug

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -3,10 +3,6 @@ h1 a {
     font-family: 'Lobster';
 }
 
-body {
-    padding-left: 15px;
-}
-
 .page-header {
     background-color: #ff9400;
     margin-top: 0;
@@ -17,6 +13,15 @@ body {
     color: #ffffff;
     font-size: 36pt;
     text-decoration: none;
+}
+
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
 }
 
 .content {
@@ -53,3 +58,10 @@ h1, h2, h3, h4 {
 .post h1 a, .post h1 a:visited {
     color: #000000;
 }
+
+.background-img {
+    background-image: url('http://wallpapercave.com/wp/YUTylLj.jpg');
+    background-size: cover;
+}
+
+
